# kdaquila-structure-lint

./: .gitignore  README.md  conftest.py  pyproject.toml
.claude/skills/check/: SKILL.md
.github/workflows/: ci.yml
docs/: configuration.md  validators.md
docs/examples/: custom_structure.toml  full_config.toml
kdaquila_structure_lint/cli/: __init__.py
kdaquila_structure_lint/cli/_functions/: __init__.py
kdaquila_structure_lint/cli/_tests/: test_cli_integration_validators.py
kdaquila_structure_lint/config/: __init__.py
kdaquila_structure_lint/config/_constants/: defaults.py
kdaquila_structure_lint/config/_functions/: __init__.py  config.py  loader.py
kdaquila_structure_lint/config/_tests/: test_config_dataclasses.py  test_find_project_root.py  test_load_config_custom.py  test_load_config_defaults.py
kdaquila_structure_lint/definition_counter/: __init__.py
kdaquila_structure_lint/test_fixtures/: __init__.py
kdaquila_structure_lint/validation/: __init__.py
scripts/: check.py
src/: conftest.py
src/features/: __init__.py
src/features/cli/: __init__.py
src/structure_lint/: cli.py  config.py
tests/: conftest.py  test_cli.py  test_config.py  test_line_limits_validator.py  test_one_per_file_validator.py  test_structure_validator.py
typescript_fixtures/_classes/: multiple_classes_fail.ts  single_class_pass.ts
typescript_fixtures/_components/: multiple_components_fail.tsx  single_component_pass.tsx
typescript_fixtures/_functions/: multiple_functions_fail.ts  single_arrow_pass.ts  single_function_pass.ts  types_plus_function_pass.ts
typescript_fixtures/_hooks/: multiple_hooks_fail.ts  single_hook_pass.ts
typescript_fixtures/_types/: multiple_types_pass.ts  types.d.ts
typescript_fixtures/not_standard_folder/: multiple_defs_pass.ts
(+188 files in other folders)
