[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kdaquila-structure-lint"
version = "0.1.0"
description = "Opinionated Python project structure and code quality linter"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "kdaquila", email = "kfd182@gmail.com" }]
keywords = [
    "linter",
    "code-quality",
    "structure",
    "validation",
    "project-structure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["tomli>=2.0.0;python_version<'3.11'"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.8.0", "ruff>=0.3.0"]

[project.urls]
Homepage = "https://github.com/kdaquila/kdaquila-structure-lint"
Repository = "https://github.com/kdaquila/kdaquila-structure-lint"
Issues = "https://github.com/kdaquila/kdaquila-structure-lint/issues"

[project.scripts]
structure-lint = "features.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/features"]

[tool.structure-lint]
enabled = true

[tool.structure-lint.validators]
line_limits = true
one_per_file = true
structure = true

[tool.structure-lint.structure]
allowed_files = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
